--- a/notebook/launch.ipynb
+++ b/notebook/launch.ipynb
@@ -2,6 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Switched to worksheet http://localhost:12800::cbtest(0x80491c5360374a5193b790c821627857).\n",
+      "Uploading /Users/tianlins/Project/booktroll/cbt-model/cbtest to http://localhost:12800: 40k [done]\n",
+      "0x90e380e514104b648d0e2ec37ef28dad\n",
+      "Uploading /Users/tianlins/Project/booktroll/cbt-model/notebook/script to http://localhost:12800: 10k [done]\n",
+      "0xbbf920ef14c249c98853d969815b2fec\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./sync.sh"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -69,8 +92,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Direct Word Embedding + BOW"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -79,17 +109,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://codalab.stanford.edu/bundles/0xbf20598a8e024da1a1c82e8851f62a98\r\n"
+      "https://codalab.stanford.edu/bundles/0xa6290ec5e84a40efba69627f7499cc91\r\n"
      ]
     }
    ],
    "source": [
-    "!cl run :data :cbtest :run_embed_bow.py \"datadir=data/ task=cn python run_embed_bow.py\" | ./makelink"
+    "!./launch.sh \"datadir=data/ python run_embed_bow.py --task cn\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -98,17 +128,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://codalab.stanford.edu/bundles/0x0c24a393a9954ed1b88235d5947ffc1c\r\n"
+      "https://codalab.stanford.edu/bundles/0x293029c2f8ef44bbbc2faca5e28a5914\r\n"
      ]
     }
    ],
    "source": [
-    "!cl run :data :cbtest :run_embed_bow.py \"datadir=data/ task=ne python run_embed_bow.py\" | ./makelink"
+    "!./launch.sh \"datadir=data/ task=ne python run_embed_bow.py\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -117,22 +147,115 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://codalab.stanford.edu/bundles/0xd03f323fd42843cd8331b3af79e5a020\r\n"
+      "https://codalab.stanford.edu/bundles/0x4db01f0650944fe0869751550a32be73\r\n"
      ]
     }
    ],
    "source": [
-    "!cl run :data :cbtest :run_embed_bow.py \"datadir=data/ task=v python run_embed_bow.py\" | ./makelink"
+    "!./launch.sh \"datadir=data/ task=p python run_embed_bow.py\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://codalab.stanford.edu/bundles/0xb19d2b80720344efa46027e7c05f5e80\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./launch.sh \"datadir=data/ task=v python run_embed_bow.py\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LSTM Embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://codalab.stanford.edu/bundles/0xa4de193097f746ba85807fb05baf9b38\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./launch.sh \"datadir=data/ task=cn python run_embed_lstm.py\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://codalab.stanford.edu/bundles/0x990cae43d9344be0a23b5d3c344d7d1d\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./launch.sh \"datadir=data/ task=ne python run_embed_lstm.py\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://codalab.stanford.edu/bundles/0xcff7bc14a6904dfda7be0f0d46a581b2\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./launch.sh \"datadir=data/ task=p python run_embed_lstm.py\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://codalab.stanford.edu/bundles/0x60845c65e8fe492685dcf82aef879b35\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./launch.sh \"datadir=data/ task=v python run_embed_lstm.py\""
+   ]
   }
  ],
  "metadata": {
