minor changes on experiment scripts

--- a/notebook/launch.ipynb
+++ b/notebook/launch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -13,9 +13,9 @@
      "text": [
       "Switched to worksheet http://localhost:12800::cbtest(0x80491c5360374a5193b790c821627857).\n",
       "Uploading /Users/tianlins/Project/booktroll/cbt-model/cbtest to http://localhost:12800: 40k [done]\n",
-      "0x90e380e514104b648d0e2ec37ef28dad\n",
+      "0xbb13c7a38d544e25a11cf915315cb64d\n",
       "Uploading /Users/tianlins/Project/booktroll/cbt-model/notebook/script to http://localhost:12800: 10k [done]\n",
-      "0xbbf920ef14c249c98853d969815b2fec\n"
+      "0x247ac6d1f841474abd98a34f60c1a182\n"
      ]
     }
    ],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -109,17 +109,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://codalab.stanford.edu/bundles/0xa6290ec5e84a40efba69627f7499cc91\r\n"
+      "https://codalab.stanford.edu/bundles/0x25ba24d0ab934a008af827405cd62587\r\n"
      ]
     }
    ],
    "source": [
-    "!./launch.sh \"datadir=data/ python run_embed_bow.py --task cn\""
+    "!./launch.sh \"THEANO_FLAGS=floatX=float32 datadir=data/ python run_embed_bow.py --task cn\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -128,17 +128,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://codalab.stanford.edu/bundles/0x293029c2f8ef44bbbc2faca5e28a5914\r\n"
+      "https://codalab.stanford.edu/bundles/0x4fcb911c13a847028427291465dd128b\r\n"
      ]
     }
    ],
    "source": [
-    "!./launch.sh \"datadir=data/ task=ne python run_embed_bow.py\""
+    "!./launch.sh \"THEANO_FLAGS=floatX=float32 datadir=data/ python run_embed_bow.py --task cn --lr 1e-3\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -147,17 +147,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://codalab.stanford.edu/bundles/0x4db01f0650944fe0869751550a32be73\r\n"
+      "https://codalab.stanford.edu/bundles/0x1474dbe3ab454c98838f056be503c19d\r\n"
      ]
     }
    ],
    "source": [
-    "!./launch.sh \"datadir=data/ task=p python run_embed_bow.py\""
+    "!./launch.sh \"THEANO_FLAGS=floatX=float32 datadir=data/ python run_embed_bow.py --task cn --lr 1e-5\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -166,12 +166,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://codalab.stanford.edu/bundles/0xb19d2b80720344efa46027e7c05f5e80\r\n"
+      "https://codalab.stanford.edu/bundles/0x3895eb0eb1cd4b36abd27fa85f68432b\r\n"
      ]
     }
    ],
    "source": [
-    "!./launch.sh \"datadir=data/ task=v python run_embed_bow.py\""
+    "!./launch.sh \"datadir=data/ task=ne python run_embed_bow.py --task ne --lr 1e-4\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://codalab.stanford.edu/bundles/0x3767ffa0b31a40c79e9d7f12314f73a1\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./launch.sh \"datadir=data/ python run_embed_bow.py --task p --lr 1e-4\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://codalab.stanford.edu/bundles/0x2646128891794a62a612883fef22150e\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./launch.sh \"datadir=data/ python run_embed_bow.py --task v --lr 1e-4\""
    ]
   },
   {
@@ -183,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -192,17 +230,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://codalab.stanford.edu/bundles/0xa4de193097f746ba85807fb05baf9b38\r\n"
+      "https://codalab.stanford.edu/bundles/0xba394e7d397b4c96807878a10b6ffbb1\r\n"
      ]
     }
    ],
    "source": [
-    "!./launch.sh \"datadir=data/ task=cn python run_embed_lstm.py\""
+    "!./launch.sh \"THEANO_FLAGS=floatX=float32 datadir=data/ python run_embed_lstm.py --task cn --lr 1e-3\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -211,17 +249,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://codalab.stanford.edu/bundles/0x990cae43d9344be0a23b5d3c344d7d1d\r\n"
+      "https://codalab.stanford.edu/bundles/0xcbbac9b54f084afd9be0856d4708d930\r\n"
      ]
     }
    ],
    "source": [
-    "!./launch.sh \"datadir=data/ task=ne python run_embed_lstm.py\""
+    "!./launch.sh \"THEANO_FLAGS=floatX=float32 datadir=data/ python run_embed_lstm.py --task cn --lr 1e-4\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -230,17 +268,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://codalab.stanford.edu/bundles/0xcff7bc14a6904dfda7be0f0d46a581b2\r\n"
+      "https://codalab.stanford.edu/bundles/0x4501fbd1df3b4b559f0fd76f0c3255cd\r\n"
      ]
     }
    ],
    "source": [
-    "!./launch.sh \"datadir=data/ task=p python run_embed_lstm.py\""
+    "!./launch.sh \"THEANO_FLAGS=floatX=float32 datadir=data/ python run_embed_lstm.py --task cn --lr 1e-5\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -249,13 +287,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://codalab.stanford.edu/bundles/0x60845c65e8fe492685dcf82aef879b35\r\n"
+      "https://codalab.stanford.edu/bundles/0x6405d74dc9fc4ff288f08776932013cd\r\n"
      ]
     }
    ],
    "source": [
-    "!./launch.sh \"datadir=data/ task=v python run_embed_lstm.py\""
+    "!./launch.sh \"datadir=data/ python run_embed_lstm.py --task ne --lr 1e-4\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://codalab.stanford.edu/bundles/0xb720e7932a924cdbbe19fec34ce993c6\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./launch.sh \"datadir=data/ python run_embed_lstm.py --task p --lr 1e-4\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://codalab.stanford.edu/bundles/0x23d4ebb9d05243dd9ce88e82bc922990\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./launch.sh \"datadir=data/ python run_embed_lstm.py --task v --lr 1e-4\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
