add memory network

--- a/notebook/launch.ipynb
+++ b/notebook/launch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -13,9 +13,9 @@
      "text": [
       "Switched to worksheet http://localhost:12800::cbtest(0x80491c5360374a5193b790c821627857).\n",
       "Uploading /Users/tianlins/Project/booktroll/cbt-model/cbtest to http://localhost:12800: 40k [done]\n",
-      "0xbb13c7a38d544e25a11cf915315cb64d\n",
+      "0x4666e3120df0493b98d6e0d8b87bfc89\n",
       "Uploading /Users/tianlins/Project/booktroll/cbt-model/notebook/script to http://localhost:12800: 10k [done]\n",
-      "0x247ac6d1f841474abd98a34f60c1a182\n"
+      "0xe6ba0d77f76a46ccb18a79691801fa80\n"
      ]
     }
    ],
@@ -331,6 +331,89 @@
    ],
    "source": [
     "!./launch.sh \"datadir=data/ python run_embed_lstm.py --task v --lr 1e-4\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://codalab.stanford.edu/bundles/0x35481a665955416084ac3ce567777c24\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cl run --request-docker-image codalab/python-cuda7.0-352.39:1.0 --request-gpus 1 \"THEANO_FLAGS=device=gpu,cuda.root=/usr/local/cuda-7.0 python -c 'import theano; print theano.__version__'\" | ./makelink"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://codalab.stanford.edu/bundles/0x5ca2a88c4145434083b780e5cdd42cb4\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cl run --request-queue host=jagupard7 --request-docker-image codalab/python-cuda7.0-352.39:1.0 --request-gpus 1 \"THEANO_FLAGS=device=gpu,cuda.root=/usr/local/cuda-7.0 python -c 'import theano; print theano.__version__'\" | ./makelink"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://codalab.stanford.edu/bundles/0xdbcce15a350946479328e084e636b6b4\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cl run  \"THEANO_FLAGS=device=gpu,cuda.root=/usr/local/cuda-7.0,floatX=float32 datadir=data/ python run_embed_bow.py --task cn\" | ./makelink"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://codalab.stanford.edu/bundles/0xc172fb0f06db4a3c93bc64c93f004e01\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!./launch-gpu.sh \"python run_embed_bow.py --task cn --lr 1e-3\""
    ]
   },
   {
